# High-LevelPuzzle

./: .gitignore  CMakeLists.txt  README.md
Smooth_Inputs/Dolhareubang/: Dolhareubang.puz  Dolhareubang_5x8x5_E1.vol
Smooth_Inputs/Owl/: owl.puz
Smooth_Inputs/Pumpkin/: Pumpkin.puz
Smooth_Inputs/angry_bird/: angry_bird.puz  angry_bird_7x6x8_E1.vol
Smooth_Inputs/cow/: Cow.puz
Smooth_Inputs/new_moai/: moai.puz
doc/: doc_image.pptx  ~$doc_image.pptx
ext/: CMakeLists.txt
ext/cmake/: FindLIBIGL.cmake  FindPugiXML.cmake
project_page/: High-levelPuzzle.html
project_page/High-levelPuzzle_files/: AzJHjRpS7TBCtPvhSiN5POetGLiHer_WRoNJX3lWbOE.js  base.js  embed.js  n13H1FEnvGw.html  remote.js  www-embed-player.js  www-player.css
puzzle/Cube_5x5x5_E1/: Cube_5x5x5_E1.vol
puzzle/Cube_5x5x5_E3/: Cube_5x5x5_E3.vol
puzzle/Cube_6x6x6_E11/: Cube_6x6x6_E11.vol
puzzle/Duck_8x8x9/: Duck_8x8x9.vol
puzzle/Mug_7x6x5/: Mug_7x6x5.vol
puzzle/Shark_7x6x10/: Shark_7x6x10.vol
puzzle/Sofa_5x5x4/: Sofa_5x5x4_K4_L5.puz
puzzle/Sphere_5x5x5_E1/: Sphere_5x5x5_E1.vol
puzzle/Trashbin_8x6x8/: Trashbin_8x6x8.vol
puzzle_old/: Cube_4x4x4_E1.vol  Cube_4x4x4_E2.vol
puzzle_old/Cube_4x4x4_E1/: Cube_4x4x4_E1_K3_L4.puz  Cube_4x4x4_E1_K3_L5.puz  Cube_4x4x4_E1_K3_L6.puz  Cube_4x4x4_E1_K4_L5_2.puz  Cube_4x4x4_E1_K4_L5_3.puz  Cube_4x4x4_E1_K4_L5_4.puz  Cube_4x4x4_E1_K4_L5_5.puz  Cube_4x4x4_E1_K4_L6_3.puz  Cube_4x4x4_E1_K4_L6_5.puz  Cube_4x4x4_E1_K4_L6_7.puz  Cube_4x4x4_E1_K4_L6_8.puz  Cube_4x4x4_E1_K4_L6_9.puz  Cube_4x4x4_E1_K5_L4.puz  Cube_4x4x4_E1_K5_L5.puz  Cube_4x4x4_E1_K5_L5_2.puz  Cube_4x4x4_E1_K5_L6.puz
puzzle_old/Cube_4x4x4_E2/: Cube_4x4x4_E2_K3_L5.puz  Cube_4x4x4_E2_K3_L6.puz  Cube_4x4x4_E2_K4_L5.puz  Cube_4x4x4_E2_K4_L6.puz  Cube_4x4x4_E2_K4_L6_2.puz  Cube_4x4x4_E2_K5_L5.puz
puzzle_old/Cube_5x5x5_E3/: Cube_5x5x5_E3_K3_L6.puz  Cube_5x5x5_E3_K3_L7.puz  Cube_5x5x5_E3_K5_L10_2.puz  Cube_5x5x5_E3_K5_L5.puz  Cube_5x5x5_E3_K5_L7.puz  Cube_5x5x5_E3_K5_L7_2.puz  Cube_5x5x5_E3_K5_L7_3.puz  Cube_5x5x5_E3_K5_L8.puz  Cube_5x5x5_E3_K5_L9.puz  Cube_5x5x5_E3_K5_L9_2.puz  Cube_5x5x5_E3_K6_L10.puz  Cube_5x5x5_E3_K6_L12.puz  Cube_5x5x5_E3_K6_L7.puz  Cube_5x5x5_E3_K6_L8.puz  Cube_5x5x5_E3_K6_L8_2.puz  Cube_5x5x5_E3_K6_L8_3.puz  Cube_5x5x5_E3_K6_L9.puz  Cube_5x5x5_E3_K7_L8_2.puz  Cube_5x5x5_E3_K7_L9.puz
puzzle_old/Cube_5x5x5_E3_big_graph/: Cube_5x5x5_E3_K6_L10.puz  Cube_5x5x5_E3_K7_L9.puz
puzzle_old/Cube_Product/: Cube_4x4x4_E1_K5_L6_2.puz  Cube_5x5x5_E3_K8_L8.puz
puzzle_old/Cube_test/: Cube_5x5x5_E3_K6_L1_1.puz  Cube_5x5x5_E3_K6_L1_2.puz  Cube_5x5x5_E3_K6_L1_2_merge.puz
puzzle_test/Cube_5x5x5_E1_K3_L5/: animation.motion.xml
puzzle_test/test/: animation.motion.xml  test.puz
puzzle_test/untitled/: untitled.puz
src/: main.cpp
src/Mesh/: Mesh.cpp  Mesh.h  MeshBoolean.cpp  MeshBoolean.h  MeshCreator.cpp  MeshCreator.h  MeshObject.cpp  MeshObject.h
src/PuzConverter/: Cube.cpp  Cube.h  Face.cpp  Face.h  ObjPiece.cpp  ObjPiece.h  ObjPuzzle.cpp  ObjPuzzle.h  PuzConverter.cpp  PuzConverter.h
src/Puzzle/: ExpVolume.cpp  ExpVolume.h  Piece.cpp  Piece.h  PieceCreator.cpp  PieceCreator.h  PieceFace.cpp  PieceFace.h  PieceGroup.cpp  PieceGroup.h  PuzAction.cpp  PuzAction.h  PuzConfig.cpp  PuzConfig.h  PuzCreator_Iter.cpp  PuzCreator_Iter.h  PuzSolver.cpp  PuzSolver.h  Puzzle.cpp  Puzzle.h  PuzzleCreator.cpp  PuzzleCreator.h  Puzzle_smooth.cpp  Puzzle_smooth.h  Volume.cpp  Volume.h
src/Puzzle_debug/: Piece_debug.cpp  Piece_debug.h  Puzzle_debug.cpp  Puzzle_debug.h
src/Render/: libigl_Render.cpp  libigl_Render.h  libigl_UI.cpp  libigl_UI.h
src/Utility/: Controls.h  HelpDefine.h  HelpFunc.cpp  HelpFunc.h  HelpPuz.cpp  HelpPuz.h  HelpStruct.cpp  HelpStruct.h  HelpTypedef.h
volume/Arc_of_triumph/: Arc_of_triumph.vol  Arc_of_triumph_Int.vol  Arc_of_triumph_Out.vol
volume/Bunny/: bunny.vol  bunny_Int.vol  bunny_Out.vol
volume/CCTV_Building/: CCTV_Building_with_Base_8x8x14.vol
volume/Chair/: Chair_5x10x5.vol
(+2739 files in other folders)
